finish project jawirBooks

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+@import "primeicons/primeicons.css";
+@plugin "tailwindcss-primeui";
+
+* {
+    // font-family: Georgia;
+    font-family: 'Open Sans', sans-serif;
+
+}
