--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="border-b border-b-[#eee] shadow fixed mb-[80px]">
     <nav>
-        <h1 class="text-[#10b981] text-2xl">JawirBooks</h1>
+        <h1 class="text-[#10b981] text-2xl cursor-pointer" routerLink="/"  >JawirBooks</h1>
     </nav>
 </header>
