--- a/src/app/detail-page/detail-page.component.html
+++ b/src/app/detail-page/detail-page.component.html
@@ -3,6 +3,6 @@
   <div *ngIf="loading">
     <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
   </div>
-  <iframe *ngIf="!loading" [src]="tempLink | safeUrl" class="w-full min-h-screen border-none" frameborder="0">
+  <iframe [src]="tempLink | safeUrl" class="w-full min-h-screen border-none" frameborder="0">
   </iframe>
 </div>
